<resources>
    <string name="app_name">Asesorias TecNM</string>

    <!--GENERALES-->
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvide_contraseña">Olvide Contraseña</string>
    <string name="recuperar_contraseña">Recuperar Contraseña</string>
    <string name="qr">Codigo QR para que alumnos capturen</string>

    <string name="click_autenticar">Toca el boton Autenticar</string>
    <string name="autenticar_huella">Autenticar</string>
    <string name="mensaje_huella">El inicio de sesión ahora es más seguro, favor de proporcionar los permisos necesarios para hacer uso del inicio de sesión con su huella.</string>
    <string name="huella_exitosa">Autenticación exitosa.</string>
    <string name="Listo_Huella">Bienvenido</string>
    <string name="error_huella">"Autenticación fallida"</string>
    <string name="huella_title">"Autenticación con huella"</string>
    <string name="huella_subtitle">"Inicio de sesión"</string>
    <string name="huella_introduzca">" Introduzca su huella"</string>
    <string name="mensaje_contacto">" Mensaje enviado, el coordinador se pondra en contacto contigo"</string>

    <!-- CONTROLADORES -->
    <string name="welcome_materia">Datos de la materia:</string>


    <!--ALUMNO-->
    <string name="asesorias_alumnos">Asesorias Alumnos</string>
    <string name="home">Inicio</string>
    <string name="descripcion">Descripción</string>
    <string name="perfil">Perfil</string>
    <string name="agendar">Agendar</string>
    <string name="citas">Citas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ayuda">Ayuda</string>
    <string name="contacto">Contacto</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>


    <string name="datos_personales">Datos Personales</string>
    <string name="correo_institucional">Correo Institucional</string>
    <string name="nombre_materia">Nombre de la materia</string>
    <string name="hora_agendada">Hora agendada</string>
    <string name="profesor_detalle">Profesor</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>

    <string name="Alumno">Alumno</string>
    <string name="Logout_mensaje">Estas seguro que quieres cerrar sesion?</string>

    <string name="Descripcion">DESCRIPCIÓN</string>
    <string name="mensaje_principal">Agenda tu cita, facilita tu proceso de aprendizaje a distancia</string>
    <string name="mensaje_secundario">Esta aplicacion, ayudará a agilizar el proceso de realizar asesorias de una manera sencilla y amigable para el usuario.</string>
    <string name="solicitud_sesion">Se solicito su sesion.</string>

    <string name="scan_qrcode">Inicio</string>

    <!--PROFESOR-->

    <string name="Rol">Rol de usuario</string>
    <string name="Guardar">Guardar</string>
    <string name="mensaje_principalP">Verifica las asesorías que se te asignan y confirmala. Minimo dos horas por semana.</string>
    <string name="mensaje_secundarioP">Esta aplicacion, ayudará a agilizar el proceso de realizar asesorias de una manera sencilla y amigable para el usuario.</string>
    <string name="mensaje_calendarioP">Verifica fechas de tus asesorias</string>

    <!--DASHBOARD-->
    <string name="usuario">Usuario</string>
    <string name="materias">Materias</string>
    <string name="mensajes">Mensajes</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="tituloDashboard">Menu Dashboard</string>

    <string name="nombreMateria">Materia</string>
    <string name="semestreMateria">Semestre</string>
    <string name="carreraMateria">Carrera</string>
    <string name="dptoMateria">Departamento</string>
    <string name="lugarMateria">Lugar</string>
    <string name="horaInicioMateria">Hora inicio (Dar doble clic)</string>
    <string name="horaFinalMateria">Hora fin (Dar doble clic)</string>
    <string name="listaMateria">Lista de materias</string>
    <string name="listaUsuarios">Lista de usuarios</string>
    <string name="interaccionUsuarios">Interaccion de usuarios</string>
    <string name="calificacionUsuarios">Calificación de usuarios</string>
    <string name="usuariosActivos">Usuarios Activos</string>
    <string name="profesorMateria">Profesor</string>
    <string name="fechaMateria">Fecha (Dar doble clic)</string>


    <!--AYUDA-->
    <string name="preguntasFrecuentes">Preguntas frecuentes</string>
    <string name="pregunta1">¿Como puedo agendar una cita?</string>
    <string name="p1p1">Primero, hay que asegurarse si existe alguna pregunta frecuente que pueda resolver tu duda o tu problema. Para ello, debes de entrar al Menu, después dar clic hasta abajo en "Ayuda" y buscar la pregunta o problema que tengas.</string>
    <string name="p1p2">En caso de no encontrar ninguna pregunta que pueda dar solución a tu problema, lo que sigue es en esa misma actividad, ir al boton de contacto. Otro metodo para acceder a esta parte, es ir al menu y dar clic en la opcion de "Contacto".</string>
    <string name="p1p3">Una vez dentro de esta parte, tendrás las opciones de ponerte en contacto con algunos de los metodos que se muestran o enviar un mensaje personalizado dentro de la aplicacion. Una vez que envies este mensaje, un coordinador se pondrá en contacto contigo.</string>
    <string name="p2p1">Para poder agendar una cita, es necesario que vayas al Menu, después de  eso dar clic en Agendar, una vez dentro, te aparecerán una lista de materias, de las cuales, al dar clic en alguna, se te van a listar las materias que se ofertan para dicha carrera.</string>
    <string name="p2p2">Una vez que des clic en alguna materia que te interese, se te mandará a otra actividad, en la cual podrás ver los detalles de la cita, en caso de querer tomarla, darás clic en el boton para solicitar dicha asesoría.</string>
    <string name="p2p3">Una vez agendada tu asesoría, tendrás que ir a la opcion de citas, dentro del menu, para poder verificar que se te haya cargado tu materia. Recuerda que al final de cada asesoría debes de escanear el codigo QR que tu profesor te va a brindar, eso se logra accediendo a la cita.</string>
    <string name="pregunta2">¿Como puedo presentar una queja?</string>
    <string name="pregunta3">¿Como saber si un alumno asiste?</string>
    <string name="pregunta4">¿Cómo puedo dar de baja una asesoria?</string>
    <string name="noSolucion">¿No has encontrado solucion a tu problema?</string>
    <string name="txtSolucion">Ponte en contacto con nosotros, para poder atenderte de manera mas personalizada</string>


    <!--CONTACTO-->
    <string name="contactus">Contactanos</string>
    <string name="telefono">Telefono</string>
    <string name="redessociales">Facebook</string>
    <string name="enviar">Enviar</string>
    <string name="mensajeContacto">Escribe tu mensaje aqui</string>
    <string name="califica">Califica nuestra App</string>
    <string name="aceptar">Aceptar</string>
    <string name="rated">Gracias por su valoración</string>
</resources>