<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".CitaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:id="@+id/DatosPersonales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_personales"
                android:textStyle="bold"
                android:textSize="@android:dimen/app_icon_size" />
            <TextView
                android:id="@+id/CorreoInstitucional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo_institucional"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/EditTextV1"
                />

            <TextView
                android:id="@+id/NombreDeMateria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_materia"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/EditTextMateria"
                />
            <TextView
                android:id="@+id/HoraAgendada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora_agendada"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/EditTextHora"
                />
            <TextView
                android:id="@+id/ProfesorTextV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesor_detalle"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/EditTextProfesor"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar_solicitud"
                android:backgroundTint="#1B396A"
                android:id="@+id/ButtonSend"
                android:onClick="ClickButtonSend"
                />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>