<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".Huella">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
       android:src="@drawable/tecnm2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />


    <TextView
        android:id="@+id/authStatusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_autenticar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/authBtn"
        android:text="@string/autenticar_huella"
        android:drawableTop="@drawable/ic_fingerprint_24"
        android:layout_below="@+id/authStatusTv"
       android:shadowColor="@color/purple_700"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/authDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authBtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="125dp"
        android:gravity="center_horizontal"
        android:text="@string/mensaje_huella"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="12dp" />


</RelativeLayout>