<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profesor_drawer_layout"
    tools:context=".ProfesorContactoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/profesor_main_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/contactus"
                        android:textSize="30dp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#5A5A5A"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/app_name"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/tecnm"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="40dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/redessociales"
                        tools:layout_editor_absoluteX="78dp"
                        tools:layout_editor_absoluteY="143dp"
                        android:textStyle="bold"
                        tools:ignore="MissingConstraints" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TecNM Campus Aguascalientes"
                        tools:layout_editor_absoluteX="78dp"
                        tools:layout_editor_absoluteY="161dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono"
                        tools:layout_editor_absoluteX="78dp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="80dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="449 910 50 02"
                        tools:layout_editor_absoluteX="78dp"
                        tools:layout_editor_absoluteY="99dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo"
                        tools:layout_editor_absoluteX="78dp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="16dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="coordinacion@aguascalientes.tecnm.mx"
                        tools:layout_editor_absoluteX="78dp"
                        tools:layout_editor_absoluteY="35dp"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="235dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/CommentEdit_TextProf"
                        android:hint="@string/mensajeContacto" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="96dp">

                    <Button
                        android:id="@+id/btnContacto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#1B396A"
                        android:onClick="ClickButtonProf"
                        android:text="@string/enviar"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"

                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/rateP"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/califica"
                        android:textSize="20dp" />
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:max="5"
                        android:layout_gravity="center"
                        android:id="@+id/starsP"
                        android:stepSize="1"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/aceptar"
                        android:id="@+id/submit_rateP" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/profesor_main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>