<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profesor_drawer_layout"
    tools:context=".PreguntaDosP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/profesor_main_toolbar"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:text="@string/pregunta2"
                    android:textAlignment="center"
                    android:textSize="20dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#5A5A5A"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:text="@string/p2p1"
                    android:textAlignment="center"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:text="@string/p2p2"
                    android:textAlignment="center"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:text="@string/p2p3"
                    android:textAlignment="center"
                    android:textSize="20dp" />




            </LinearLayout>



        </ScrollView>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/profesor_main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>